--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "夜静海涛三万里，月明飞锡下天风"
 ---
 
 {% for post in paginator.posts %}
