--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "I am the AMAZING Spider-17BOY, ."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,16 +15,14 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>Well, it's the first time for every things right?<br>
+    确定的山一直在等着不确定的人</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>周树皮(17BOY)</strong>，现在西工大读研。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>工作、学习之余，我还是一个健身&马拉松爱好者，同时也非常喜欢弹吉他。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
 
-    <p></p>
     
     <h5>Talks</h5>
 
@@ -41,11 +39,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>Hi, I am <strong>Kyson Zhou</strong>，you can call me <strong>Kyson</strong>. I am currently pursuing a master's degree at NPU</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="https://github.com/zhoukexin-62">Github·BY</a>.</p>
     
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>I am a sports enthusiast, I like fitness, running and playing guitar.</p>
 
     <h5>Talks</h5>
 
