--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "I am the AMAZING Spider-17BOY, ."
+description: "I am the AMAZING Spider-17BOY ."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Well, it's the first time for every things right?<br>
     确定的山一直在等着不确定的人</p></blockquote>
 
-    <p>Hey，我是<strong>周树皮(17BOY)</strong>，现在西工大读研。</p>
+    <p>Hey，我是<strong>周树皮(KysonZhou)</strong>，现在西工大读研。</p>
 
     <p>工作、学习之余，我还是一个健身&马拉松爱好者，同时也非常喜欢弹吉他。</p>
 
