--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>Well, it's a first time for every things right?<br>
+    <blockquote><p>Well, it's a first time for everything right?<br>
     确定的山一直在等着不确定的人</p></blockquote>
 
     <p>Hey，我是<strong>周树皮(KysonZhou)</strong>，现在西工大读研。</p>
