--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "I am the AMAZING Spider-17BOY."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/spider_man_bg.png"
 ---
 
 <!-- Language Selector -->
